=== SVN

* Implemented Dataset#grep method.

=== 1.0.10 (2008-02-13)

* Fixed Datset#group_and_count to work inside a query block (#152).

* Changed datasets with transforms to automatically transform hash filters (#155).

* Changed Marshal stock transform to use Base64 encoding with backward-compatibility to support existing marshaled values (#154).

* Added support for inserting multiple records in a single statement using #multi_insert in MySQL adapter (#153).

* Added support for :slice option (same as :commit_every) in Dataset#multi_insert.

* Changed Dataset#all to accept opts and iteration block.

=== 1.0.9 (2008-02-10)

* Implemented Dataset#inspect and Database#inspect (#151).

* Added full-text searching for odbc_mssql adapter (thanks Joseph Love).

* Added AlterTableGenerator#add_full_text_index method.

* Implemented full_text indexing and searching for PostgreSQL adapter (thanks David Lee).

* Implemented full_text indexing and searching for MySQL adapter (thanks David Lee).

* Fixed Dataset#insert_sql to work with array subscript references (thanks Jim Morris).

=== 1.0.8 (2008-02-08)

* Added support for multiple choices in string matching expressions (#147).

* Renamed Dataset#clone_merge to Dataset#clone, works with or without options for merging (#148).

* Fixed MySQL::Database#<< method to always free the result in order to allow multiple calls in a row (#149). Same also for PostgreSQL adapter.

=== 1.0.7 (2008-02-05)

* Added support for conditional filters (using if else statements) inside block filters (thanks Kee).

=== 1.0.6 (2008-02-05)

* Removed code pollution introduced in revs 814, 817 (really bad patch, IMO).

* Fixed joining datasets using aliased tables (#140).

* Added support additional field types in postgresql adapter (#146).

* Added support for date field types in postgresql adapter (#145).

* Fixed Dataset#count to work correctly for grouped datasets (#144).

* Added Dataset#select_more, Dataset#order_more methods (#129).
